correções finais no arquivo de inserção; correções básicas no layout

--- a/src/main/resources/templates/offers/info.html
+++ b/src/main/resources/templates/offers/info.html
@@ -83,7 +83,7 @@
             </thead>
             <tbody th:each="c : ${offer.candidatureList}">
             <tr>
-                <td th:text="${c.student.name}">Nome do Estudante</td>
+                <td><a th:text="${c.student.name}" th:href="@{/student/info/{id}(id=${c.student.id})}">Nome do estudante</a></td>
                 <td th:text="${c.student.enrollment}">Matrícula do Estudante</td>
                 <td th:text="${c.student.email}">Email do Estudante</td>
                 <td th:text="${c.student.course}">Curso do Estudante</td>
