--- a/src/main/resources/templates/offers/list.html
+++ b/src/main/resources/templates/offers/list.html
@@ -70,15 +70,15 @@
                 <div class="father-card">
                     <div class="col-md-6 col-lg-6" th:each="offer : ${offers}">
                         <div class="individual-offer-card inter-font">
-                            <h3 th:text="${offer.companyResponsible.fantasyName}"></h3>
+                            <h3 th:text="${offer.principalActivity}"></h3>
                             <div class="d-flex flex-row gap-2">
                                 <div class="d-flex flex-column">
                                     <small>ID:</small>
                                     <p th:text="${offer.id}"></p>
                                 </div>
                                 <div class="d-flex flex-column">
-                                    <small>Principal Atividade:</small>
-                                    <p th:text="${offer.principalActivity}"></p>
+                                    <small>Contratante:</small>
+                                    <a th:href="@{/company/info/{id}(id=${offer.companyResponsible.id})}" th:text="${offer.companyResponsible.fantasyName}"></a>
                                 </div>
                             </div>
                             <div class="d-flex flex-row gap-3">
