--- a/src/main/resources/templates/fragments/custom-headfiles.html
+++ b/src/main/resources/templates/fragments/custom-headfiles.html
@@ -2,6 +2,8 @@
 <head th:fragment="list-headfiles(title)">
     <meta th:replace="~{/fragments/headfiles(title=${title})}" />
     <link rel="stylesheet" th:href="@{/styles/list.css}">
+    <link rel="stylesheet" th:href="@{/styles/fragments/table-global.css}">
+    <link rel="stylesheet" th:href="@{/styles/fragments/card-global.css}">
 </head>
 
 <head th:fragment="form-headfiles(title)">
