fix: referencia aos campos de usuário

--- a/src/main/resources/templates/companies/fragments/table.html
+++ b/src/main/resources/templates/companies/fragments/table.html
@@ -19,7 +19,7 @@
             <td th:text="${company.fantasyName}"></td>
             <td th:text="${company.cnpj}"></td>
             <td th:text="${company.principalActivity}"></td>
-            <td th:text="${company.email}"></td>
+            <td th:text="${company.user.email}"></td>
             <td th:text="${company.phoneNumber}">td>
             <td th:text="${company.personContact}">td>
             <td th:text="${company.address}">td>
