--- a/src/main/resources/templates/companies/info.html
+++ b/src/main/resources/templates/companies/info.html
@@ -62,7 +62,7 @@
                 <div class="flex around">
                     <div class="topic">
                         <h1 class="topic-title">Email</h1>
-                        <p class="topic-content" th:text="${company.email}">Email da empresa</p>
+                        <p class="topic-content" th:text="${company.user.email}">Email da empresa</p>
                     </div>
 
                     <div class="topic">
