--- a/src/main/resources/templates/students/info.html
+++ b/src/main/resources/templates/students/info.html
@@ -67,7 +67,7 @@
             <div class="flex around">
                 <div class="topic">
                     <h1 class="topic-title">Email</h1>
-                    <p class="topic-content" th:text="${student.email}">palinha.joao@academico.uepa.edu.br</p>
+                    <p class="topic-content" th:text="${student.user.email}">palinha.joao@academico.uepa.edu.br</p>
                 </div>
 
                 <div class="topic">
