--- a/src/main/resources/templates/companies/fragments/card.html
+++ b/src/main/resources/templates/companies/fragments/card.html
@@ -16,7 +16,7 @@
         <!-- Email e Telefone -->
         <div class="d-flex flex-column">
             <smal>Email:</smal>
-            <p th:text="${company.email}"></p>
+            <p th:text="${company.user.email}"></p>
         </div>
         <div class="d-flex flex-column">
             <smal>Telefone:</smal>
