--- a/src/main/resources/templates/students/edit.html
+++ b/src/main/resources/templates/students/edit.html
@@ -12,7 +12,7 @@
 <form th:action="@{/student/edit/{id}(id=${student.id})}" method="post">
   <input type="hidden" th:field="*{id}"/>
   Nome: <input type="text" th:field="*{name}"/><br/><br/>
-  Email: <input type="text" th:field="*{email}"/><br/><br/>
+  Email: <input type="text" th:field="*{user.email}"/><br/><br/>
   Matrícula: <input type="text" th:field="*{enrollment}"/><br/><br/>
   Curso: <input type="text" th:field="*{course}"/><br/><br/>
   <input type="submit" value="Salvar">
