--- a/src/main/resources/templates/students/fragments/card.html
+++ b/src/main/resources/templates/students/fragments/card.html
@@ -17,7 +17,7 @@
         </div>
         <div class="d-flex flex-column">
             <smal>Email:</smal>
-            <p th:text="${student.email}"></p>
+            <p th:text="${student.user.email}"></p>
         </div>
     </div>
     <div class="d-flex flex-row gap-2">
